--- a/src/styles/bootstrap/bootstrap.scss
+++ b/src/styles/bootstrap/bootstrap.scss
@@ -14,11 +14,11 @@
 @import '../../../node_modules/bootstrap/scss/reboot';
 
 // Core CSS
-// @import '../../../node_modules/bootstrap/scss/buttons';
+@import '../../../node_modules/bootstrap/scss/buttons';
 // @import '../../../node_modules/bootstrap/scss/code';
-// @import '../../../node_modules/bootstrap/scss/forms';
+@import '../../../node_modules/bootstrap/scss/forms';
 @import '../../../node_modules/bootstrap/scss/grid';
-// @import '../../../node_modules/bootstrap/scss/images';
+@import '../../../node_modules/bootstrap/scss/images';
 // @import '../../../node_modules/bootstrap/scss/tables';
 // @import '../../../node_modules/bootstrap/scss/type';
 
@@ -30,13 +30,13 @@
 // @import '../../../node_modules/bootstrap/scss/card';
 // @import '../../../node_modules/bootstrap/scss/close';
 // @import '../../../node_modules/bootstrap/scss/custom-forms';
-// @import '../../../node_modules/bootstrap/scss/dropdown';
+@import '../../../node_modules/bootstrap/scss/dropdown';
 // @import '../../../node_modules/bootstrap/scss/input-group';
 // @import '../../../node_modules/bootstrap/scss/jumbotron';
 // @import '../../../node_modules/bootstrap/scss/list-group';
 // @import '../../../node_modules/bootstrap/scss/media';
-// @import '../../../node_modules/bootstrap/scss/nav';
-// @import '../../../node_modules/bootstrap/scss/navbar';
+@import '../../../node_modules/bootstrap/scss/nav';
+@import '../../../node_modules/bootstrap/scss/navbar';
 // @import '../../../node_modules/bootstrap/scss/pagination';
 // @import '../../../node_modules/bootstrap/scss/progress';
 
@@ -47,5 +47,5 @@
 // @import '../../../node_modules/bootstrap/scss/tooltip';
 
 // Utility classes
-// @import '../../../node_modules/bootstrap/scss/transitions';
+@import '../../../node_modules/bootstrap/scss/transitions';
 @import '../../../node_modules/bootstrap/scss/utilities';
