--- a/src/styles/bootstrap/bootstrap.scss
+++ b/src/styles/bootstrap/bootstrap.scss
@@ -20,14 +20,14 @@
 @import '../../../node_modules/bootstrap/scss/grid';
 @import '../../../node_modules/bootstrap/scss/images';
 // @import '../../../node_modules/bootstrap/scss/tables';
-// @import '../../../node_modules/bootstrap/scss/type';
+@import '../../../node_modules/bootstrap/scss/type';
 
 // Components
 // @import '../../../node_modules/bootstrap/scss/alert';
 // @import '../../../node_modules/bootstrap/scss/badge';
 // @import '../../../node_modules/bootstrap/scss/breadcrumb';
 // @import '../../../node_modules/bootstrap/scss/button-group';
-// @import '../../../node_modules/bootstrap/scss/card';
+@import '../../../node_modules/bootstrap/scss/card';
 // @import '../../../node_modules/bootstrap/scss/close';
 // @import '../../../node_modules/bootstrap/scss/custom-forms';
 @import '../../../node_modules/bootstrap/scss/dropdown';
