--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -5,4 +5,25 @@
     padding-top: 15px;
     padding-bottom: 15px;
   }
+
+  &__main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 380px;
+    background: url('/gfx/images/header.png') no-repeat;
+    background-size: cover;
+  }
+
+  &__title {
+    font-size: 48px;
+    color: $white;
+  }
+
+  &__subtitle {
+    font-size: 24px;
+    font-weight: 400;
+    color: #fffefe;
+  }
 }
