--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -5,3 +5,9 @@
     justify-content: flex-end;
   }
 }
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus,
+.nav-link, .navbar-light .navbar-nav .active > .nav-link {
+  color: $blue;
+}
