--- a/src/styles/components/nav.scss
+++ b/src/styles/components/nav.scss
@@ -8,6 +8,6 @@
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link:focus,
-.nav-link, .navbar-light .navbar-nav .active > .nav-link {
+.navbar-light .navbar-nav .active > .nav-link {
   color: $blue;
 }
